<resources>

    // Main Activity
    <string name="app_name">"Довідник Кам'янця-Подільського"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="site_link">OurSite.com.ua</string>



    <string name="nav_news">Новини</string>
    <string name="nav_business">Підприємства</string>
    <string name="nav_posters">Афіші</string>
    <string name="nav_advertisement">Оголошення</string>
    <string name="nav_weather">Погода</string>

    <string name="nav_authorization">Авторизація</string>
    <string name="nav_authorization_logout">Вийти</string>
    <string name="nav_about">Про проект</string>
    <string name="nav_settings">Налаштування</string>


    <string name="hint_category_name">Назва категорії</string>
    <string name="hint_category_uri">"URL or File Name in /CATEGORY-IMAGES/"</string>
    <string name="hint_subcategory_uri">"URL or File Name in /SUBCATEGORY-IMAGES/"</string>
    <string name="hint_event_name">Назва події</string>
    <string name="hint_object_uri">"URL or File Name in /OBJECT-IMAGES/"</string>
    <string name="hint_search">Пошук</string>
    <string name="hint_event_uri">"URL or File Name in /EVENT-IMAGES/"</string>
    <string name="hint_name">Назва</string>
    <string name="hint_description">Опис</string>
    <string name="hint_address">Адрес</string>
    <string name="hint_dinner">Обід</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_time">Час роботи</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_double_press">Натисніть ще раз аби вийти з додатку</string>
    <string name="hint_email">Електронна скринька</string>
    <string name="hint_subcategory_name">Назва підкатегорії</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_events">ПОДІЇ</string>


    <string name="ok">Ок</string>
    <string name="cancel">Відмінити</string>
    <string name="delete">Видалити</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">Авторизація</string>
    <string name="action_sign_in">Ввійти або зареєструватись</string>
    <string name="action_sign_in_short">ВВійти</string>
    <string name="error_invalid_email">Емеіл введено не вірно</string>
    <string name="error_invalid_password">Пароль за короткий</string>
    <string name="error_incorrect_password">Парольне не правильний</string>
    <string name="error_field_required">Це поле обовязкове</string>
    <string name="permission_rationale">"Дозвіл на доступ до контактів необхідний щоб автозаповнювати поле: емаіл."</string>
    <string name="action_google_sign_in">Google+</string>
    <string name="action_facebook_sign_in">Facebook</string>
    <string name="facebook_app_id">313169909142318</string>
    <string name="fb_login_protocol_scheme">fb120365751928990</string>
    <string name="auth_success">Авторизація пройшла успішно</string>
    <string name="dialog_logout_title">Ви дійсно хочете вийти?</string>
    <string name="text_login">Увійдіть за допомогою однієї із соціальних мереж або з допомогою електронної скриньки та паролю:</string>
    <string name="auth_success_reg">Створення нового користувача пройшло успішно</string>
    <string name="create_user_failed">Не вдається ввійти. Можливо пароль введено невірно. Натисніть \"Забули пароль?\" для відновлення доступу.</string>
    <string name="action_restore_password">Забули пароль?</string>
    <string name="text_restore_password">Нам необхідно Ваша електронна скринька щоб відправити інструкцію по відновленню.</string>
    <string name="dialog_restore_password_title">Введіть Email</string>
    <string name="toast_restore_pass">Інструкцію надіслано на Ваш Email</string>
    <string name="toast_restore_pass_uns">Email введено невірно</string>


    <string name="dialog_category_title">Введіть дані категорії</string>
    <string name="dialog_subcategory_title">Введіть дані підкатегорії</string>
    <string name="dialog_object_title">Введіть дані обєкта</string>
    <string name="dialog_event_title">Введіть дані події</string>


    <string name="action_call">ПОДЗВОНИТИ</string>
    <string name="text_show_on_map">Показати на карті</string>
    <string name="backdrop_subtitle">SucbTItle</string>
    <string name="backdrop_title">Titcle</string>
    <string name="title_activity_oject">Obcject</string>


</resources>
