<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.kpgukraine.ObjectActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="?android:dividerHorizontal"
            android:dividerPadding="8dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <!-- TITLE -->
            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="ТОВ Алфабет"
                android:textSize="24sp" />

            <!-- IMAGE -->
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_cover_height" />

            <!-- MAP -->
            <LinearLayout
                android:id="@+id/panel_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_image_24_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/text_show_on_map"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_show_on_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="вул. Тр Будвыельикыв"
                        android:textColor="@color/colorBlack50"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>

            <!-- Time -->
            <LinearLayout
                android:id="@+id/panel_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_image_24_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/hint_time"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Пн - Пт з 9:00 - 18:00"
                        android:textColor="@color/colorBlack50"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>

            <!-- PHONE -->
            <LinearLayout
                android:id="@+id/panel_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_image_24_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/hint_phone"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="0958422333"
                        android:textColor="@color/colorBlack50"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>


            <!-- EVENTS -->
            <TextView
                android:id="@+id/text_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:padding="16dp"
                android:text="@string/hint_events"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>


            <!-- DESCRIPTION -->
            <TextView
                android:id="@+id/text_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:padding="16dp"
                android:text="@string/hint_description"
                android:textAllCaps="true"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add" />

</android.support.design.widget.CoordinatorLayout>
